assert(false) failed: not G1 barrier raw StoreP

XMLWordPrintable

    • b05
    • generic
    • generic
    • Not verified

        Regression after 7147744 changes:

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/tmp/jprt/P1/170627.tkrodrig/source/src/share/vm/opto/escape.cpp:483), pid=1715, tid=11
        # assert(false) failed: not G1 barrier raw StoreP
        #
        # JRE version: 7.0_04-b15
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (24.0-b04-internal-201203131706.tkrodrig.7152961-fastdebug mixed mode solaris-amd64 compressed oops)
        # Core dump written. Default location: /export/local/58723.JDK7.NIGHTLY.VM_solaris-amd64_ctw_server_comp_nightly.testlist/results/ctw_jre_lib_rt_jar_classes_14001_15000/core or core.1715
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0x00000000016a4800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=11, stack(0xfffffd7ffdbc6000,0xfffffd7ffdcc6000)]

        Stack: [0xfffffd7ffdbc6000,0xfffffd7ffdcc6000], sp=0xfffffd7ffdcbbe20, free space=983k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x28cbfc4] void VMError::report(outputStream*)+0x8c8
        V [libjvm.so+0x28cd175] void VMError::report_and_die()+0x4fd
        V [libjvm.so+0xf20343] void report_vm_error(const char*,int,const char*,const char*)+0x55f
        V [libjvm.so+0x104dac0] void ConnectionGraph::add_node_to_connection_graph(Node*,Unique_Node_List*)+0xc68
        V [libjvm.so+0x104b9e8] bool ConnectionGraph::compute_escape()+0x73c
        V [libjvm.so+0x104b126] void ConnectionGraph::do_analysis(Compile*,PhaseIterGVN*)+0x1c2
        V [libjvm.so+0xd5d181] void Compile::Optimize()+0x50d
        V [libjvm.so+0xd54d50] Compile::Compile(ciEnv*,C2Compiler*,ciMethod*,int,bool,bool)+0x14c4
        V [libjvm.so+0xad8fe7] void C2Compiler::compile_method(ciEnv*,ciMethod*,int)+0x16b
        V [libjvm.so+0xd7d3d2] void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x1566
        V [libjvm.so+0xd7b1a7] void CompileBroker::compiler_thread_loop()+0xc8f
        V [libjvm.so+0x278186c] void JavaThread::thread_main_inner()+0x4d4
        V [libjvm.so+0x2781100] void JavaThread::run()+0x750
        V [libjvm.so+0x230367e] java_start+0x1ce
        C [libc.so.1+0x1222ad] _thrp_setup+0xa5
        C [libc.so.1+0x122550] _lwp_start+0x0

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: