7154997: assert(false) failed: not G1 barrier raw StoreP

Skip only G1 cases and explicitly set global escape state in unsafe cases.

Reviewed-by: never